Navbar: fix search icon clipping with expanded viewBox

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,13 +27,6 @@
   font-style: normal;
   font-display: swap;
 }
-@font-face {
-  font-family: 'Coolvetica Cond';
-  src: url('/fonts/Coolvetica Rg Cond.otf') format('opentype');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
 
 @font-face {
   font-family: 'Creato Display';
